# raspi-home-package

./: .gitignore  README.md  RELEASE.md  makefile  pyproject.toml  requirements.txt
raspi-hom-texx/automation/: automation.py
raspi-hom-texx/sys_info/: cpu.py
src/raspi_home_texx/: __init__.py  automation.py  bot_telegram.py  datetime_builder.py  environment_info.py  file_logger.py  system_info.py
src/raspi_home_texx/automation/: automation.py
src/raspi_home_texx/bot/: chat_filter.py  chat_handler.py  command.py  commands.py  custom_keyboard_builder.py
src/raspi_home_texx/sys_info/: cpu.py  datetime.py  disk.py  memory.py
src/system_info_texx/: base_sys_info.py  cpu.py  disk.py  disk_info.py  memory.py  system_info.py  utils.py
tests/: test_commands.py  test_cpu.py  test_disk.py  test_disk_info.py  test_logger.py  test_memory.py  test_system_info.py
