[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "system_info_texx"
version = "0.0.1"
authors = [
  { name="Marco Tessari", email="marco.tex@live.com" },
]
description = "A simple system information package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/7exx/system-info"
Issues = "https://github.com/7exx/system-info/issues"