[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "raspi_home_texx"
version = "0.3.1"
authors = [
  { name="Marco Tessari", email="marco.tex@live.com" },
]
description = "A simple raspi home automation package"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "psutil ~= 5.9",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/7exx/raspi-home-package"
Issues = "https://github.com/7exx/raspi-home-package/issues"